--- a/src/BigDrive.Client/BigDrive.Client.vcxproj
+++ b/src/BigDrive.Client/BigDrive.Client.vcxproj
@@ -163,7 +163,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\Shared\EventLogger.h" />
     <ClInclude Include="ApplicationCollection.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="BigDriveClientConfigurationManager.h" />
@@ -179,6 +178,7 @@
     <ClInclude Include="Dispatch.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="DriveConfiguration.h" />
+    <ClInclude Include="BigDriveClientEventLogger.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="FuncDesc.h" />
     <ClInclude Include="GuidUtil.h" />
@@ -194,9 +194,6 @@
     <ClInclude Include="VariantUtil.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Shared\EventLogger.cpp">
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
-    </ClCompile>
     <ClCompile Include="ApplicationCollection.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
     <ClCompile Include="BigDriveClientConfigurationManager.cpp" />
@@ -212,6 +209,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="DriveConfiguration.cpp" />
+    <ClCompile Include="BigDriveClientEventLogger.cpp" />
     <ClCompile Include="FuncDesc.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
