--- a/test/unit/BigDrive.ConfigProvider.Test/BigDrive.ConfigProvider.Test.csproj
+++ b/test/unit/BigDrive.ConfigProvider.Test/BigDrive.ConfigProvider.Test.csproj
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C7E1D4E4-7C8E-4C44-A6CF-3277EA2A5441}</ProjectGuid>
+    <ProjectGuid>{720293B6-8C51-42F8-8896-7CA41B45CA96}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BigDrive.Unit.ConfigurationProvider.Test</RootNamespace>
+    <RootNamespace>BigDrive.ConfigProvider.Test</RootNamespace>
     <AssemblyName>BigDrive.ConfigProvider.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -37,68 +38,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights">
-      <Version>2.23.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Extensions.Telemetry">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport.Abstractions">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Extensions.VSTestBridge">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Platform">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Platform.MSBuild">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.AdapterUtilities">
-      <Version>17.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
-      <Version>17.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="MSTest.Analyzers" PrivateAssets="all">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="MSTest.TestAdapter">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="MSTest.TestFramework">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Buffers">
-      <Version>4.6.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.Collections.Immutable">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Memory">
-      <Version>4.6.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.Numerics.Vectors">
-      <Version>4.6.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reflection.Metadata">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>6.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="System.Threading.Tasks.Extensions">
-      <Version>4.6.3</Version>
-    </PackageReference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DriveManagerTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProviderManagerTests.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestAdapter">
+      <Version>2.2.10</Version>
+    </PackageReference>
+    <PackageReference Include="MSTest.TestFramework">
+      <Version>2.2.10</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\ConfigProvider\BigDrive.ConfigProvider.csproj">
