--- a/test/unit/BigDrive.Service.Test/BigDrive.Service.Test.csproj
+++ b/test/unit/BigDrive.Service.Test/BigDrive.Service.Test.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BFCE7EB1-40A6-4EE2-BBA6-402AFFE4D05D}</ProjectGuid>
+    <ProjectGuid>{E2680035-D414-4526-9E95-2CE64CAF293F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BigDrive.Unit.Service.Test</RootNamespace>
+    <RootNamespace>BigDrive.Service.Test</RootNamespace>
     <AssemblyName>BigDrive.Service.Test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -38,94 +38,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ApplicationInsights">
-      <Version>2.23.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Extensions.Telemetry">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Extensions.TrxReport.Abstractions">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Extensions.VSTestBridge">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Platform">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Testing.Platform.MSBuild">
-      <Version>1.7.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.AdapterUtilities">
-      <Version>17.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.TestPlatform.ObjectModel">
-      <Version>17.14.0</Version>
-    </PackageReference>
-    <PackageReference Include="MSTest.Analyzers" PrivateAssets="all">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="MSTest.TestAdapter">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="MSTest.TestFramework">
-      <Version>3.9.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Buffers">
-      <Version>4.6.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.Collections.Immutable">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.IO.Pipelines">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Memory">
-      <Version>4.6.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.Numerics.Vectors">
-      <Version>4.6.1</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reflection.Metadata">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>6.1.2</Version>
-    </PackageReference>
-    <PackageReference Include="System.Text.Encodings.Web">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Text.Json">
-      <Version>9.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="System.Threading.Tasks.Extensions">
-      <Version>4.6.3</Version>
-    </PackageReference>
-    <PackageReference Include="System.ValueTuple">
-      <Version>4.6.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Numerics" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.EnterpriseServices" />
-    <Reference Include="System.Runtime" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BigDriveConfigurationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestAdapter">
+      <Version>2.2.10</Version>
+    </PackageReference>
+    <PackageReference Include="MSTest.TestFramework">
+      <Version>2.2.10</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\ConfigProvider\BigDrive.ConfigProvider.csproj">
