--- a/src/Interfaces/BigDrive.Interfaces.csproj
+++ b/src/Interfaces/BigDrive.Interfaces.csproj
@@ -48,9 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IBigDriveConfiguration.cs" />
-    <Compile Include="IBigDriveReadFolders.cs" />
     <Compile Include="IBigDriveRegistration.cs" />
-    <Compile Include="IBigDriveRoot.cs" />
+    <Compile Include="IBigDriveEnumerate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
