--- a/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
+++ b/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="BigDriveTraceSource.cs" />
     <Compile Include="Provider-IBigDriveRegistration.cs" />
-    <Compile Include="Provider.IBigDriveRoot.cs" />
+    <Compile Include="Provider.IBigDriveEnumerate.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.IProcessInitializer.cs" />
