--- a/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
+++ b/test/unit/BigDrive.ShellFolder.Test/BigDrive.ShellFolder.Test.vcxproj
@@ -174,6 +174,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BigDriveEnumIDListTests.cpp" />
+    <ClCompile Include="BigDriveShellFolderTests.cpp" />
     <ClCompile Include="DllMainTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
