--- a/src/IShellFolder/IShellFolder.vcxproj
+++ b/src/IShellFolder/IShellFolder.vcxproj
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BigDriveShellContextMenu.h" />
     <ClInclude Include="BigDriveEnumIDList.h" />
     <ClInclude Include="BigDriveItemType.h" />
     <ClInclude Include="BigDriveShellFolderFactory.h" />
@@ -185,6 +186,8 @@
     <ClCompile Include="BigDriveEnumIDList-IEnumIDList.cpp" />
     <ClCompile Include="BigDriveEnumIDList-IUnknown.cpp" />
     <ClCompile Include="BigDriveEnumIDList.cpp" />
+    <ClCompile Include="BigDriveShellContextMenu-IUnknown.cpp" />
+    <ClCompile Include="BigDriveShellContextMenu.cpp" />
     <ClCompile Include="BigDriveShellIcon-IExtractIconA.cpp" />
     <ClCompile Include="BigDriveShellIcon-IExtractIconW.cpp" />
     <ClCompile Include="BigDriveShellFolder-IObjectWithBackReferences.cpp" />
