--- a/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
+++ b/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BigDriveTraceSource.cs" />
+    <Compile Include="Provider-IBigDriveFileInfo.cs" />
     <Compile Include="Provider-IBigDriveRegistration.cs" />
     <Compile Include="Provider.IBigDriveEnumerate.cs" />
     <Compile Include="Provider.cs" />
