--- a/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
+++ b/src/BigDrive.Provider.Sample/BigDrive.Provider.Sample.csproj
@@ -51,12 +51,14 @@
   <ItemGroup>
     <Compile Include="BigDriveTraceSource.cs" />
     <Compile Include="Provider-IBigDriveFileInfo.cs" />
+    <Compile Include="Provider-IBigDriveFileOperations.cs" />
     <Compile Include="Provider-IBigDriveRegistration.cs" />
     <Compile Include="Provider.IBigDriveEnumerate.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.IProcessInitializer.cs" />
     <Compile Include="ProviderConfigurationFactory.cs" />
+    <Compile Include="FolderNode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\BigDrive.snk" />
