--- a/src/IShellFolder/IShellFolder.vcxproj
+++ b/src/IShellFolder/IShellFolder.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="BigDriveShellFolderFactory.h" />
     <ClInclude Include="BigDriveShellFolder.h" />
     <ClInclude Include="BigDriveShellFolderStatic.h" />
+    <ClInclude Include="BigDriveTransferSource.h" />
     <ClInclude Include="Logging\BigDriveShellFolderTraceLogger.h" />
     <ClInclude Include="BigDriveShellIcon.h" />
     <ClInclude Include="dllmain.h" />
@@ -211,6 +212,8 @@
     <ClCompile Include="BigDriveShellFolderFactory-IClassFactory.cpp" />
     <ClCompile Include="BigDriveShellFolderFactory-IUnknown.cpp" />
     <ClCompile Include="BigDriveShellFolderFactory.cpp" />
+    <ClCompile Include="BigDriveTransferSource-ITransferSource.cpp" />
+    <ClCompile Include="BigDriveTransferSource.cpp" />
     <ClCompile Include="Logging\BigDriveShellFolderTraceLogger.cpp" />
     <ClCompile Include="BigDriveShellIcon-IUnknown.cpp" />
     <ClCompile Include="BigDriveShellIcon.cpp" />
@@ -221,6 +224,7 @@
     <ClCompile Include="Exports\RegistrationManagerExports.cpp" />
     <ClCompile Include="LaunchDebugger.cpp" />
     <ClCompile Include="Logging\BigDriveTraceLogger.cpp" />
+    <ClCompile Include="BigDriveTransferSource-IUnknown.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
